--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
       "email": "jakubpas@gmail.com"
     }
   ],
+  "minimum-stability": "stable",
   "require": {
     "php": ">=5.3.0",
     "smarty/smarty": "v2.6.29"
