--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "require": {
   },
   "require-dev": {
-    "phpunit/phpunit": "3.7",
+    "phpunit/phpunit": "^4.8",
     "mikey179/vfsStream": "1.4.*"
   },
   "scripts": {},
