--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ php:
 before_script:
   - composer self-update
   - composer install --no-interaction
-  - curl -L https://gist.githubusercontent.com/JimMackin/c3db403bae59c2c9a27c/raw/config_si.php > config_si.php
+  - [ -f "config_si.php" ] || curl -L https://gist.githubusercontent.com/JimMackin/c3db403bae59c2c9a27c/raw/config_si.php > config_si.php
   - php -r "\$_SERVER['HTTP_HOST'] = 'localhost'; \$_SERVER['REQUEST_URI'] = 'install.php';\$_REQUEST = array('goto' => 'SilentInstall', 'cli' => true);require_once 'install.php';";
 script:
   - cd tests
