--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -8,7 +8,7 @@ convertErrorsToExceptions       = "true"
 convertNoticesToExceptions      = "true"
 convertWarningsToExceptions     = "true"
 processIsolation                = "false"
-stopOnFailure                   = "false"
+stopOnFailure                   = "true"
 syntaxCheck                     = "false"
 bootstrap                       = "bootstrap.php"
         >
