--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
 language: php
 php:
-  - '5.4'
-  - '5.5'
-  - '5.6'
-  - '7.0'
+  - 5.4
+  - 5.5
+  - 5.6
+  - 7.0
   - hhvm
 matrix:
   allow_failures:
-    php:
-      - '5.4'    # This can be resolved but must downgrade phpunit(symfony/yaml v3.0.3 requires php >=5.5.9 )
-      - '7.0'    # This is not a php7-ready project - this should be disabled alltogether
-      - 'hhvm'   # ZIP Error(11): Status(0): Arhive(cache/zipTest.zip): Directory(cache)
+    - php: 5.4    # This can be resolved but must downgrade phpunit(symfony/yaml v3.0.3 requires php >=5.5.9 )
+    - php: 7.0    # This is not a php7-ready project - this should be disabled alltogether
+    - php: hhvm   # ZIP Error(11): Status(0): Arhive(cache/zipTest.zip): Directory(cache)
 before_script:
   - composer self-update
   - composer install --no-interaction
