--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "vendor-dir": "vendor"
   },
   "require": {
+    "symfony/console": "^2.6"
   },
   "require-dev": {
     "phpunit/phpunit": "^3.7",
