--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
   - composer self-update
   - composer install --no-interaction
   - \[ -f "config_si.php" \] || cp tests/travis_config_si.php config_si.php
-  - php tests/testinstall.php
+  - ./console -v app:install --db-name=suitecrm --db-username=travis
 script:
   - cd tests
   - ../vendor/bin/phpunit
