--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ matrix:
 before_script:
   - composer self-update
   - composer install --no-interaction
-  - \[ -f "config_si.php" \] || cp tests/travis_config_si.php config_si.php
-  - ./console -v app:install --db-name=suitecrm --db-username=travis
+  - ./console -v app:install --db-name=suitecrm --db-username=travis --site-admin-username=admin --site-admin-password=admin --site-system-name="SuiteCRM Travis Build" --no-interaction
 script:
   - cd tests
   - ../vendor/bin/phpunit
