--- a/src/SuiteCrm/Install/assets/install_defaults.yml
+++ b/src/SuiteCrm/Install/assets/install_defaults.yml
@@ -86,6 +86,9 @@ config:
   default_currency_iso4217: USD
   default_locale_name_format: s f l
   export_delimiter: ','
+  setup_db_host_instance: SQLEXPRESS
+  setup_db_create_sugarsales_user: false
+
 
   #other - unnown
 #  oc_install:
