--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "vendor-dir": "vendor"
   },
   "require": {
-    "symfony/console": "^2.6"
+    "symfony/console": "^2.6",
+    "monolog/monolog": "^1.19"
   },
   "require-dev": {
     "phpunit/phpunit": "^3.7",
