--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -36,7 +36,7 @@ build:
         'date.timezone': 'Europe/Rome'
 #  dependencies:
 #    before:
-#      - { command: 'sh tests/build_dependencies_before.sh', idle_timeout: 600 }
+#      - { command: 'true', idle_timeout: 600 }
 #    override:
 #     - { command: 'composer install --no-interaction', idle_timeout: 600 }
 #    after:
