--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -20,8 +20,9 @@ tools:
   php_cpd: true
   php_code_coverage: false
   external_code_coverage:
-      timeout: 3600
-      runs: 3 #wait for all 3 tests from travis
+      timeout: 1800
+      #should be 3 to wait for all 3 tests from travis - but travis for 5.5. and 5.6 fails to generate code coverage
+      runs: 1
 
 checks:
     php:
