--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,11 @@ before_script:
   - \[ -f "config_si.php" \] || cp tests/travis_config_si.php config_si.php
   - php tests/testinstall.php
 script:
-  - vendor/bin/phpunit -c phpunit.xml --coverage-clover=coverage.clover.unit
+  - if [ $(phpenv version-name) = "5.5" ]; then vendor/bin/phpunit -c phpunit.xml; fi
+  - if [ $(phpenv version-name) = "5.6" ]; then vendor/bin/phpunit -c phpunit.xml; fi
+  - if [ $(phpenv version-name) = "7.0" ]; then vendor/bin/phpunit -c phpunit.xml --coverage-clover=coverage.clover.unit; fi
 after_script:
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover.unit
+  - if [ $(phpenv version-name) = "7.0" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover.unit; fi
 services:
   - mysql
 branches:
