--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ script:
   - if [ $(phpenv version-name) = "5.6" ]; then vendor/bin/phpunit -c phpunit.xml; fi
   - if [ $(phpenv version-name) = "7.0" ]; then vendor/bin/phpunit -c phpunit.xml --coverage-clover=coverage.clover.unit; fi
 after_script:
+  - if [ $(phpenv version-name) = "7.0" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
   - if [ $(phpenv version-name) = "7.0" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover.unit; fi
 services:
   - mysql
