--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -16,8 +16,12 @@ tools:
   php_mess_detector: true
   php_cs_fixer: true
   php_code_sniffer: true
-  php_loc: true
-  php_cpd: true
+  php_loc:
+      enabled: true
+      excluded_dirs: [cache, examples, tests, upload, vendor, Zend]
+  php_cpd:
+      enabled: true
+      excluded_dirs: [cache, examples, tests, upload, vendor, Zend]
   php_code_coverage: false
   external_code_coverage:
       timeout: 1800
