Add PHPMailer, composer-custom-directory-installer
This update to composer.json allows for effortless automatic security updates to third party libraries, such as PHPMailer.
The rest of the third party libraries will be added to the list as soon as this one is tried out.
To update your PHPMailer to the newest version, execute the following command from the shell:
composer update

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "vendor-dir": "vendor"
   },
   "require": {
+    "phpmailer/phpmailer": "^5.2",
+    "mnsami/composer-custom-directory-installer": "^1.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^3.7",
@@ -21,5 +23,9 @@
       "": "src/"
     }
   },
-  "extra": {}
+  "extra":{
+    "installer-paths":{
+      "./include/phpmailer/": ["phpmailer/phpmailer"]
+    }
+  }
 }
