--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,47 @@
 language: php
+dist: trusty
+sudo: false
+addons:
+  sonarqube: true
+
 php:
   - 5.5
   - 5.6
   - 7.0
   - 7.1
   - 5.4
+
 matrix:
+  fast_finish: true
   allow_failures:
     - php: 5.4
+
+cache:
+  directories:
+    - '$HOME/.sonar/cache'
+
 before_script:
   - composer self-update
   - composer install --no-interaction
   - \[ -f "config_si.php" \] || cp tests/travis_config_si.php config_si.php
   - php tests/testinstall.php
+
 script:
   - cd tests
   - ../vendor/bin/phpunit
   - cat ../suitecrm.log
+  - if [["$TRAVIS_PHP_VERSION" == "7.0"]];
+    then
+      sonar-scanner
+        -Dsonar.login=$SONAR_TOKEN
+        -Dsonar.projectKey=SuiteCRM
+        -Dsonar.sources=.
+        -Dsonar.language=php;
+    fi
+
 services:
   - mysql
+
 branches:
   only:
     - master
